--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,7 +17,8 @@ jobs:
         with:
           github_user_name: msrishav-28
           outputs: |
-            dist/github-snake.svg?palette=github-dark&color_snake=00ff41&color_dots=0d1117,1a3a1a,2d5a2d,00ff41,39ff14
+            dist/github-contribution-grid-snake-dark.svg
+            dist/github-contribution-grid-snake.svg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             
