--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -2,7 +2,7 @@ name: GitHub-Profile-3D-Contrib
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *"  # Daily at midnight UTC
   workflow_dispatch:
 
 jobs:
@@ -13,6 +13,7 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v3
+      
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -20,7 +21,7 @@ jobs:
         with:
           setting-json: |
             {
-              "type": "normal",
+              "type": "night-green",
               "backgroundColor": "#0d1117",
               "foregroundColor": "#00ff41",
               "strongColor": "#00ff41",
@@ -35,10 +36,11 @@ jobs:
                 "#00ff41"
               ]
             }
+      
       - name: Commit & Push
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add -A .
-          git commit -m "generated"
+          git commit -m "Generated 3D contribution graph" || echo "No changes to commit"
           git push
