--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 */12 * * *"
+    - cron: "0 */12 * * *"  # Every 12 hours
   workflow_dispatch:
 
 jobs:
@@ -17,8 +17,8 @@ jobs:
         with:
           github_user_name: msrishav-28
           outputs: |
-            dist/github-contribution-grid-snake-dark.svg
-            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=00ff41&color_dots=0d1117,00661a,009929,00cc33,00ff41
+            dist/github-contribution-grid-snake.svg?palette=github-light&color_snake=008000&color_dots=ebedf0,99ffb3,33ff66,00cc33,008000
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             
