--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,12 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - uses: Platane/snk/svg-only@v3
+      - uses: Platane/snk@v3
         with:
           github_user_name: msrishav-28
           outputs: |
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=00ff41&color_dots=0d1117,00661a,009929,00cc33,00ff41
-            dist/github-contribution-grid-snake.svg?palette=github-light&color_snake=008000&color_dots=ebedf0,99ffb3,33ff66,00cc33,008000
+            dist/github-contribution-grid-snake-dark.svg
+            dist/github-contribution-grid-snake.svg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             
