--- a/.github/workflows/custom-stats.yml
+++ b/.github/workflows/custom-stats.yml
@@ -32,8 +32,8 @@ jobs:
       
       - name: Commit & Push
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add -A .
           git commit -m "Generated custom Matrix green stats [skip ci]" || echo "No changes to commit"
           git push
