--- a/.github/workflows/custom-stats.yml
+++ b/.github/workflows/custom-stats.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           python .github/scripts/generate_green_stats.py
           python .github/scripts/generate_matrix_achievements.py
+          python .github/scripts/generate_matrix_footer.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: msrishav-28
